# RetroBot

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-build.yml  tests.yml
playmatch_client/: Cargo.toml
playmatch_client/src/: lib.rs
resources/: playmatch-openapi.json
src/: main.rs
src/abstraction/: activity_data.rs  command.rs  mod.rs  playmatch.rs
src/command/: mod.rs  playmatch.rs  role.rs  util.rs
src/events/: mod.rs
src/util/: mod.rs
