[package]
name = "RetroBot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "time"] }
dotenvy = "^0.15"
env_logger = "^0.11"
log = "^0.4"
serenity = { version = "^0.12", features = ["client", "gateway", "rustls_backend", "model", "framework"] }
poise = "^0.6"

[build-dependencies]
built = { version = "^0.7", features = ["chrono", "semver", "git2"] }