[package]
name = "RetroBot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "time"] }
dotenvy = "^0.15"
log = "^0.4"
serenity = { version = "^0.12", features = ["client", "gateway", "rustls_backend", "model", "framework", "cache", "builder", "chrono"] }
poise = { version = "^0.6", features = ["chrono", "cache"] }
anyhow = "^1"
tracing = "^0.1"
tracing-subscriber = "^0.3"
chrono = "^0.4"
reqwest = { version = "^0.12", features = ["rustls-tls"], default-features = false }
lazy_static = "^1.5"

[build-dependencies]
built = { version = "^0.7", features = ["chrono", "semver", "git2"] }
